k8s/manifests/master-data/service/istio/destination-rules.yaml

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: master-data        # change per namespace
spec:
  host: "*.master-data.svc.cluster.local"   # scoped to this namespace's services
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
